#
# Copyright 2021 Splunk Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[tool.poetry]
name = "splunk-connect-for-snmp-mib-server"
version = "0.1.0"
description = "Host a community collection of SNMP MIBs and serves them to SNMP Trap and SNMP Poller to do MIB translation"
authors = ["Your Name <you@example.com>"]
license = "APACHE-2.0"

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.11.3"
pysnmp = "^4.4.12"
requests = "^2.25.1"
PyYAML = "^5.4.1"
Flask = "^1.1.2"
Flask-AutoIndex = "^0.6.6"
types-PyYAML = "^5.4.3"

[tool.poetry.dev-dependencies]
mongomock = "^3.22.1"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.poetry.scripts]
sc4snmp-mib-server = "splunk_connect_for_snmp_mib_server.snmp_mib_server:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = [
    "pysnmp.*",
    "pysmi",
    "pymongo.*",
    "jsoncomment",
    "requests",
    "yaml",
    "flask",
    "flask_autoindex",
    "mongomock"

]
ignore_missing_imports = true